# pypi-to-spack-package

./: .gitignore  COPYRIGHT  README.md  import.py  package.py  pyproject.toml  spack_requirements.txt  to_package.py  to_sqlite.py  to_sqlite_normalized.py
contrib/: compare.py  diff.py
src/: dump.py  import-versions.py  import.py  import_db.py  package.py  spack-to-requirements.py  spack_to_requirements.py  to-spack-repo.py  to_spack_repo.py
src/pypi_to_spack_package/: __init__.py  fetch_bigquery_data.py  generator.py  import_db.py  update_versions.py
tests/: test_package.py  test_versions.py
